fix: update pointer-events for ScrollButton visibility

--- a/src/components/ScrollButton/ScrollButton.module.scss
+++ b/src/components/ScrollButton/ScrollButton.module.scss
@@ -15,6 +15,7 @@
   background-color: rgb(32, 156, 238);
   box-shadow: inset -4px -4px 0 0 rgb(31, 132, 199);
   color: #fff;
+  pointer-events: none;
 
   clip-path: polygon(
     0 4px,
@@ -45,6 +46,7 @@
 
 .visible {
   opacity: 1;
+  pointer-events: auto;
 
   &:hover {
     background-color: rgb(41, 147, 218);
